# War-Thunder-skins-manager

./: LICENSE  README.md
wt-skins-manager/: Cargo.toml  game_directory.txt
wt-skins-manager/src/: helpers.rs  installer.rs  main.rs  scrapper.rs  uninstaller.rs
