[package]
name = "wt-skins-manager"
version = "1.0.0"
edition = "2021"
authors = ["Slyvred <https://github.com/Slyvred>"]

[dependencies]
headless_chrome = "1.0.10"
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.4"
zip = "2.1.3"
chrono = "0.4.38"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false